<resources>
    <string name="app_name">Grocery App</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_item_price">Enter Item Price</string>
    <string name="enter_item_quantity">Enter Item Quantity</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="add_items_to_cart">Add Items to Cart</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="_200">200</string>
    <string name="total_cost">Total Cost</string>
    <string name="amt">Amt</string>
    <string name="_100">100</string>
</resources>