<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="#006060"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/idTVItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:text="@string/item_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/qtyLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/rateLL"
            android:orientation="vertical"
            android:paddingStart="40dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/idQuantityheader"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/quantity"
                android:textColor="@color/white"
                android:textSize="11sp" />


            <TextView
                android:id="@+id/idTVQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/_100"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rateLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/idRateheader"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1.5"
                android:padding="4dp"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/idTVRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/_200"
                android:textColor="@color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/idIVDelete"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rateLL"
            android:layout_alignParentEnd="true"
            android:layout_margin="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:importantForAccessibility="no"
            android:padding="4dp"
            android:src="@drawable/ic_delete"
            app:tint="@color/white" />


        <TextView
            android:id="@+id/idTVHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/qtyLL"
            android:layout_alignParentStart="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/idTVTotalAmt"
            android:padding="4dp"
            android:text="@string/total_cost"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/idTVTotalAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/qtyLL"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="211dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/idIVDelete"
            android:padding="4dp"
            android:text="@string/amt"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>